Creacion del header

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<div class="jumbotron">
+    <div class="text-center">
+        <h1 class="display-4">Martin</h1>
+        <h3>Desarrollador java</h3>
+    </div>
+</div>
