--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -4,6 +4,15 @@
             <li class="nav-item">
                 <a href="" class="nav-link text-secondary">Home</a>
             </li>
+            <li class="nav-item">
+                <a href="" class="nav-link text-secondary">Portfolio</a>
+            </li>
+            <li class="nav-item">
+                <a href="" class="nav-link text-secondary">CV</a>
+            </li>
+            <li class="nav-item">
+                <a href="" class="nav-link text-secondary">Contacto</a>
+            </li>
         </ul>
     </div>
 </nav>
