--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -2,16 +2,16 @@
     <div class="container">
         <ul class="nav justify-content-center">
             <li class="nav-item">
-                <a href="" class="nav-link text-secondary">Home</a>
+                <a href="" class="nav-link text-secondary" routerLink="/home" routerLinkActive="text-dark">Home</a>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link text-secondary">Portfolio</a>
+                <a href="" class="nav-link text-secondary" routerLink="/portfolio" routerLinkActive="text-dark">Portfolio</a>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link text-secondary">CV</a>
+                <a href="" class="nav-link text-secondary" routerLink="/resume" routerLinkActive="text-dark">CV</a>
             </li>
             <li class="nav-item">
-                <a href="" class="nav-link text-secondary">Contacto</a>
+                <a href="" class="nav-link text-secondary" routerLink="/contact" routerLinkActive="text-dark">Contacto</a>
             </li>
         </ul>
     </div>
