tarjetas e imagen en sobre mi

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg shadow border m-1">
+            <div class="text-center">
+                <h2>Acerca de mí</h2>
+                <img src="../../assets/imgs/foto_martin_estrada.jpeg" alt="foto de Martin Estrada" width="300" height="320" class="rounded-circle">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Modi blanditiis sequi optio magni veniam totam, hic iure libero vel magnam quisquam ad et maiores animi adipisci quo voluptatibus possimus at expedita aut. Reiciendis velit accusamus placeat aspernatur vel eum iure laboriosam ut accusantium? Recusandae placeat consequuntur et at excepturi laboriosam architecto ipsam quaerat, nesciunt dolore, nulla illum odit, id repellendus saepe sunt adipisci assumenda! Corrupti, necessitatibus voluptatem recusandae doloremque reprehenderit officia voluptatum, temporibus itaque quod quae accusantium, odio dignissimos. Molestiae minus, placeat laboriosam voluptatum soluta totam a ipsa. Numquam ipsum facere nulla assumenda ut asperiores autem unde placeat nemo sed.</p>
+            </div>
+        </div>
+        <div class="col-lg shadow border m-1">
+            <div class="text-center">
+                <h2>Proyecto Destacado</h2>
+            </div>
+        </div>
+    </div>
+</div>
