--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,16 +1,16 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 mb-4" style="max-width: 380px; min-width: 380px;">
-            <app-project-card [projectName]="'Prueba'"></app-project-card>            
+            <app-project-card [project]="project" ></app-project-card>            
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 mb-4" style="max-width: 380px; min-width: 380px;">
-            <app-project-card [projectName]="'Prueba 2'"></app-project-card>            
+            <app-project-card [project]="project" ></app-project-card>            
         </div>
         <div class="col-lg-4 col-md-6 col-sm-12 mb-4" style="max-width: 380px; min-width: 380px;">
-            <app-project-card [projectName]="'Prueba 3'"></app-project-card>            
+            <app-project-card [project]="project" ></app-project-card>            
         </div>
-        <div class="col-lg-4 col-md-6 col-sm-12 mb-4" style="max-width: 380px; min-width: 380px;">
-            <app-project-card [projectName]="'Prueba 4'"></app-project-card>            
+        <div class="col-lg-4 col-md-6 col-ssm-12 mb-4" style="max-width: 380px; min-width: 380px;">
+            <app-project-card [project]="project" ></app-project-card>            
         </div>
     </div>
 </div>
