creacion de servicio

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,6 +10,7 @@
         <div class="col-lg shadow border m-1">
             <div class="text-center">
                 <h2>Proyecto Destacado</h2>
+                <h4>{{featuredProject.name}}</h4>
             </div>
         </div>
     </div>
