--- a/src/app/project-modal/project-modal.component.html
+++ b/src/app/project-modal/project-modal.component.html
@@ -1,1 +1,22 @@
-<p>project-modal works!</p>
+<div class="modal-header">
+    <h2>{{project.name}}</h2>
+    <button class="btn-close" (click)="closeProjectModal()"></button>
+</div>
+<div class="modal-body">
+    <carousel>
+        <slide *ngFor="let image of project.images">
+            <img [src]="image" alt="project image" style="display: block; width: 100%;">
+        </slide>
+    </carousel>
+    <h3 class="mt-2">Descripcion</h3>
+    <p>{{project.description}}</p>
+    <p>Podes ver este projecto en <a [href]="project.projectLink" target="_blank">Aca</a> </p>
+    <hr>
+    <div class="d-flex flex-wrap">
+        <div *ngFor="let tag of project.technologies">
+            <div class="tag me-2 mb-1" [style.background-color]="tag.color">{{tag}}</div>
+        </div>
+    </div>
+
+</div>
+
