--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,16 @@
-<div class="jumbotron">
+<div class="jumbotron" style="position:relative;">
     <div class="text-center">
         <h1 class="display-4">Martin</h1>
         <h3>Desarrollador java</h3>
+    </div>
+
+    <div style="position:absolute; bottom: 5px; right: 10px;">
+        <a href="https://www.linkedin.com/in/martinsaav/" target="_blank">
+            <img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="linkedin" width="24" height="24" class="rounded-circle me-2">
+        </a>
+
+        <a href="https://github.com/martinSaav" target="_blank">
+            <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png" alt="github" width="24" height="24" class="rounded-circle me-2">
+        </a>
     </div>
 </div>
