portfolio base terminado

--- a/src/app/project-card/project-card.component.html
+++ b/src/app/project-card/project-card.component.html
@@ -2,7 +2,7 @@
     <div class="card-body">
         <h5 class="card-tittle">{{project.name}}</h5>
         <p class="card-text">{{project.summary}}</p>
-        <button class="btn btn-primary" (click)="openProjectModal()">View Project</button>
+        <button class="btn btn-primary" (click)="openProjectModal()">Mirar proyecto</button>
     </div>
     <div class="card-footer">
         <small class="text-muted">Última actualización hace 3 minutos</small>
