--- a/src/app/project-modal/project-modal.component.html
+++ b/src/app/project-modal/project-modal.component.html
@@ -10,7 +10,7 @@
     </carousel>
     <h3 class="mt-2">Descripcion</h3>
     <p>{{project.description}}</p>
-    <p>Podes ver este projecto en <a [href]="project.projectLink" target="_blank">Aca</a> </p>
+    <p>Podes ver este projecto <a [href]="project.projectLink" target="_blank">Aca</a> </p>
     <hr>
     <div class="d-flex flex-wrap">
         <div *ngFor="let tag of project.technologies">
