--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,3 +1,4 @@
 <div class="container text-center">
-    <button class="btn btn-primary mb-5 shadow border" (click)="downloadFile()">Descargar PDF CV Español</button>
+    <button class="btn btn-primary mb-5 shadow border" (click)="downloadFile('1O2pjeK1L7klouClx_4h8HWygIbzuKKR9')">Descargar PDF CV Español</button>
+    <button class="btn btn-primary mb-5 shadow border" (click)="openLink('https://drive.google.com/file/d/1O2pjeK1L7klouClx_4h8HWygIbzuKKR9/view?usp=sharing')">Ver CV en español</button>
 </div>
