--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,4 +1,13 @@
 <div class="container text-center">
-    <button class="btn btn-primary mb-5 shadow border" (click)="downloadFile('1O2pjeK1L7klouClx_4h8HWygIbzuKKR9')">Descargar PDF CV Español</button>
-    <button class="btn btn-primary mb-5 shadow border" (click)="openLink('https://drive.google.com/file/d/1O2pjeK1L7klouClx_4h8HWygIbzuKKR9/view?usp=sharing')">Ver CV en español</button>
+    <h2>CV en español</h2>
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-primary mb-5 shadow border" (click)="downloadFile('1O2pjeK1L7klouClx_4h8HWygIbzuKKR9')">Descargar PDF CV Español</button>
+        <button class="btn btn-primary mb-5 shadow border" (click)="openLink('https://drive.google.com/file/d/1O2pjeK1L7klouClx_4h8HWygIbzuKKR9/view?usp=sharing')">Ver CV en español</button>
+    </div>
+    <h2>CV en inglés</h2>
+    <div class="d-flex justify-content-center">
+        <button class="btn btn-primary mb-5 shadow border" (click)="downloadFile('1o8cDH8J4RzCYwx7SJzNxrSKvVncYu7gU')">Descargar PDF CV Inglés</button>
+        <button class="btn btn-primary mb-5 shadow border" (click)="openLink('https://drive.google.com/file/d/1o8cDH8J4RzCYwx7SJzNxrSKvVncYu7gU/view?usp=sharing')">Ver CV en Inglés</button>
+    </div>
+
 </div>
