contacto de email e icono

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,7 +2,6 @@
     <div class="text-center border mb-5 shadow rounded">
         <h1 class="display-4">Contacto</h1>
         <p class="lead">Puedes contactarnos a través de los siguientes medios:</p>
-        <b>martin996&#64;hotmail.com.ar</b>
     </div>
 
     <div class="list-group shadow">
@@ -14,6 +13,11 @@
         <a href="https://github.com/martinSaav" target="_blank" class="list-group-item list-group-item-action d-flex gap-3 py-3">
             <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png" alt="github" width="30" height="32" class="rounded-circle flex-shrink-0 me-5">
             <h3 class="mb-0">Github</h3>
+        </a>
+
+        <a href="mailto:martin996@hotmail.com.ar" class="list-group-item list-group-item-action d-flex gap-3 py-3">
+            <img src="https://img.icons8.com/ios-glyphs/30/000000/email.png" alt="email" width="30" height="32" class="rounded-circle flex-shrink-0 me-5">
+            <h3 class="mb-0">Email</h3>
         </a>
     </div>
 </div>
