--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,5 +12,9 @@
         <a href="https://github.com/martinSaav" target="_blank">
             <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png" alt="github" width="24" height="24" class="rounded-circle me-2">
         </a>
+
+        <a href="mailto:martin996@hotmail.com.ar" target="_blank">
+            <img src="https://img.icons8.com/ios-glyphs/30/000000/email.png" alt="email" width="24" height="24" class="rounded-circle me-2">
+        </a>
     </div>
 </div>
