Nueva seccion de certificaciones

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="jumbotron" style="position:relative;">
     <div class="text-center">
-        <h1 class="display-4">Martin</h1>
-        <h3>Desarrollador java</h3>
+        <h1 class="display-4">Martín Alejandro Estrada Saavedra</h1>
+        <h3>Desarrollador Back-End</h3>
     </div>
 
     <div style="position:absolute; bottom: 5px; right: 10px;">
