--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,6 +4,8 @@
         <p class="lead">Puedes contactarnos a través de los siguientes medios:</p>
     </div>
 
+    <app-contact-form></app-contact-form>
+
     <div class="list-group shadow">
         <a href="https://www.linkedin.com/in/martinsaav/" target="_blank" class="list-group-item list-group-item-action d-flex gap-3 py-3">
             <img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="linkedin" width="30" height="32" class="rounded-circle flex-shrink-0 me-5">
