--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
-<div class="jumbotron" style="position:relative;">
+<div class="jumbotron">
     <div class="text-center">
-        <h1 class="display-4">Martín Alejandro Estrada Saavedra</h1>
+        <h1 class="display-5">Martín Alejandro Estrada Saavedra</h1>
         <h3>Desarrollador FullStack</h3>
     </div>
 
