--- a/src/app/resume/resume.component.html
+++ b/src/app/resume/resume.component.html
@@ -1,4 +1,8 @@
-<div class="container text-center">
+<div class="mt-4 mb-5">
+    <h1 class="text-center">Curriculum</h1>
+</div>
+
+<div class="text-center">
     <h2>CV en español</h2>
     <div class="d-flex justify-content-center">
         <button class="btn btn-primary mb-5 shadow border" (click)="downloadFile('1O2pjeK1L7klouClx_4h8HWygIbzuKKR9')">Descargar PDF CV Español</button>
@@ -9,5 +13,4 @@
         <button class="btn btn-primary mb-5 shadow border" (click)="downloadFile('1o8cDH8J4RzCYwx7SJzNxrSKvVncYu7gU')">Descargar PDF CV Inglés</button>
         <button class="btn btn-primary mb-5 shadow border" (click)="openLink('https://drive.google.com/file/d/1o8cDH8J4RzCYwx7SJzNxrSKvVncYu7gU/view?usp=sharing')">Ver CV en Inglés</button>
     </div>
-
 </div>
