--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,26 @@
-<div class="shadow-sm">
+<div class="shadow-sm fixed-header">
     <app-header></app-header>
     <app-nav></app-nav>
 </div>
-<router-outlet></router-outlet>
+
+
+
+<div class="container">
+    <div></div>
+    <app-home id="home"> </app-home>
+    <div class="row">
+        <div class="col-lg shadow border m-1">
+            <app-portfolio id="portfolio"> </app-portfolio>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg shadow border m-1">
+            <app-resume id="resume"> </app-resume>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg shadow border m-1 p-3">
+            <app-contact id="contact"> </app-contact>
+        </div>
+    </div>
+</div>
