--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,25 +1,23 @@
-<div class="container">
-    <div class="text-center border mb-3 shadow rounded">
-        <h1 class="display-4">Contacto</h1>
-        <p class="lead">Podés contactarme a través de los siguientes medios:</p>
-    </div>
-    <div class="border mb-3 p-3 shadow rounded">
-        <app-contact-form></app-contact-form>
-    </div>
-    <div class="list-group shadow">
-        <a href="https://www.linkedin.com/in/martinsaav/" target="_blank" class="list-group-item list-group-item-action d-flex gap-3 py-3">
-            <img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="linkedin" width="30" height="32" class="rounded-circle flex-shrink-0 me-5">
-            <h3 class="mb-0">Linkedin</h3>
-        </a>
+<div class="text-center border mb-3 shadow rounded">
+    <h1>Contacto</h1>
+    <p class="lead">Podés contactarme a través de los siguientes medios:</p>
+</div>
+<div class="border mb-3 p-3 shadow rounded">
+    <app-contact-form></app-contact-form>
+</div>
+<div class="list-group shadow">
+    <a href="https://www.linkedin.com/in/martinsaav/" target="_blank" class="list-group-item list-group-item-action d-flex gap-3 py-3">
+        <img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="linkedin" width="30" height="32" class="rounded-circle flex-shrink-0 me-5">
+        <h3 class="mb-0">Linkedin</h3>
+    </a>
 
-        <a href="https://github.com/martinSaav" target="_blank" class="list-group-item list-group-item-action d-flex gap-3 py-3">
-            <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png" alt="github" width="30" height="32" class="rounded-circle flex-shrink-0 me-5">
-            <h3 class="mb-0">Github</h3>
-        </a>
+    <a href="https://github.com/martinSaav" target="_blank" class="list-group-item list-group-item-action d-flex gap-3 py-3">
+        <img src="https://img.icons8.com/ios-glyphs/30/000000/github.png" alt="github" width="30" height="32" class="rounded-circle flex-shrink-0 me-5">
+        <h3 class="mb-0">Github</h3>
+    </a>
 
-        <a href="mailto:martin996@hotmail.com.ar" class="list-group-item list-group-item-action d-flex gap-3 py-3">
-            <img src="https://img.icons8.com/ios-glyphs/30/000000/email.png" alt="email" width="30" height="32" class="rounded-circle flex-shrink-0 me-5">
-            <h3 class="mb-0">Email</h3>
-        </a>
-    </div>
+    <a href="mailto:martin996@hotmail.com.ar" class="list-group-item list-group-item-action d-flex gap-3 py-3">
+        <img src="https://img.icons8.com/ios-glyphs/30/000000/email.png" alt="email" width="30" height="32" class="rounded-circle flex-shrink-0 me-5">
+        <h3 class="mb-0">Email</h3>
+    </a>
 </div>
