--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+    font-family: 'Roboto', sans-serif;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    margin-top: 250px;
+}
+
 .tag {
     padding: 0 20px;
     height: 30px;
