centrar texto de certificaciones y eliminacion de contenedor innecesario en contacto

--- a/src/app/certifications/certifications.component.html
+++ b/src/app/certifications/certifications.component.html
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-    <h2 class="mb-4">Certificaciones</h2>
+    <h2 class="mb-4 text-center">Certificaciones</h2>
     <div *ngFor="let cert of certifications" class="card mb-3">
       <div class="card-body">
         <h5 class="card-title">{{ cert.name }}</h5>
