--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
-<div class="text-center border mb-3 shadow rounded">
-    <h1>Contacto</h1>
-    <p class="lead">Podés contactarme a través de los siguientes medios:</p>
+<div class="mt-4 mb-4">
+    <h1 class="text-center">Curriculum</h1>
+    <p class="text-center">Podés contactarme a través de los siguientes medios.</p>
 </div>
 <div class="border mb-3 p-3 shadow rounded">
     <app-contact-form></app-contact-form>
