contenedor innecesario en form de contacto

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,7 +2,7 @@
     <h1 class="text-center">Curriculum</h1>
     <p class="text-center">Podés contactarme a través de los siguientes medios.</p>
 </div>
-<div class="border mb-3 p-3 shadow rounded">
+<div class=" mb-3 p-3">
     <app-contact-form></app-contact-form>
 </div>
 <div class="list-group shadow">
