error de tipeo en contacto

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div class="mt-4 mb-4">
-    <h1 class="text-center">Curriculum</h1>
+    <h1 class="text-center">Contacto</h1>
     <p class="text-center">Podés contactarme a través de los siguientes medios.</p>
 </div>
 <div class=" mb-3 p-3">
