--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="row">
     <div class="col-lg shadow border m-1">
         <div class="text-center">
-            <h2>Acerca de mí</h2>
-            <img src="./assets/imgs/foto_martin_estrada.jpeg" alt="foto de Martin Estrada" width="300" height="360" class="rounded-circle">
+            <h2 class="mt-2">Acerca de mí</h2>
+            <img src="./assets/imgs/foto_martin_estrada.jpeg" alt="foto de Martin Estrada" width="300" height="385" class="rounded mb-4">
             <p> Me llamo Martín Alejandro Estrada Saavedra, tengo 22 años y soy de la Ciudad de autónoma de Buenos Aires, Argentina. 
-                Soy estudiante de la carrera de Ingeniería en Informática en la Facultad de Ingeniería de la Universidad de Buenos Aires.
+                Soy estudiante de la carrera de Ingeniería en Informática en la Facultad de Ingeniería de la Universidad de Buenos Ai res.
                 Me apasiona la programación, el desarrollo de software, me encanta aprender cosas nuevas y ayudar a los demas.
             </p>
         </div>
@@ -12,7 +12,7 @@
     <!---->
     <div class="col-lg shadow border m-1">
         <div class="text-center">
-            <h2>Proyecto Destacado</h2>
+            <h2 class="mt-2">Proyecto Destacado</h2>
             <h4>{{featuredProject.name}}</h4>
         </div>
         <carousel>
