--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,24 @@
 <div class="shadow-sm fixed-header">
     <app-header></app-header>
     <app-nav></app-nav>
-</div>
-
-<div class="container">
-    <app-home id="home"> </app-home>
+  </div>
+  
+  <div class="container">
+    <app-home id="home" class="animate"> </app-home>
     <div class="row">
-        <div class="col-lg shadow border m-1">
-            <app-portfolio id="portfolio"> </app-portfolio>
-        </div>
+      <div class="col-lg shadow border m-1 animate">
+        <app-portfolio id="portfolio"> </app-portfolio>
+      </div>
     </div>
     <div class="row">
-        <div class="col-lg shadow border m-1">
-            <app-resume id="resume"> </app-resume>
-        </div>
+      <div class="col-lg shadow border m-1 animate">
+        <app-resume id="resume"> </app-resume>
+      </div>
     </div>
     <div class="row">
-        <div class="col-lg shadow border m-1 p-3">
-            <app-contact id="contact"> </app-contact>
-        </div>
+      <div class="col-lg shadow border m-1 p-3 animate">
+        <app-contact id="contact"> </app-contact>
+      </div>
     </div>
-</div>
+  </div>
+  
