--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,14 @@
   </div>
   
   <div class="container">
-    <app-home id="home" class="animate"> </app-home>
+    <div class="animate mb-4">  
+      <app-home id="home" ></app-home>
+    </div>
+    <div class="row">
+      <div class="col-lg shadow border m-1 animate">
+          <app-certifications></app-certifications>
+      </div>
+    </div>
     <div class="row">
       <div class="col-lg shadow border m-1 animate">
         <app-portfolio id="portfolio"> </app-portfolio>
