--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -14,7 +14,7 @@
 @keyframes fadeInUp {
   from {
     opacity: 0;
-    transform: translateY(20px);
+    transform: translateY(1em);
   }
   to {
     opacity: 1;
@@ -25,11 +25,11 @@
 /* Clase para aplicar la animación */
 .animate {
   opacity: 0; /* Comienza con el elemento invisible */
-  transition: opacity 0.7s, transform 0.7s;
+  transition: opacity 0.9s, transform 0.9s;
 }
 
 /* Clase para activar la animación */
 .in-view {
   opacity: 1; /* Hace el elemento visible */
-  animation: fadeInUp 0.7s forwards; /* Ejecuta la animación */
+  animation: fadeInUp 0.9s forwards; /* Ejecuta la animación */
 }
