--- a/src/app/project-modal/project-modal.component.html
+++ b/src/app/project-modal/project-modal.component.html
@@ -8,7 +8,7 @@
             <img [src]="image" alt="project image" style="display: block; width: 100%;">
         </slide>
     </carousel>
-    <h3 class="mt-2">Descripcion</h3>
+    <h3 class="mt-2">Descripción</h3>
     <p>{{project.description}}</p>
     <p>Podes ver este projecto <a [href]="project.projectLink" target="_blank">Aca</a> </p>
     <hr>
