--- a/src/app/certifications/certifications.component.html
+++ b/src/app/certifications/certifications.component.html
@@ -3,7 +3,7 @@
     <div *ngFor="let cert of certifications" class="card mb-3">
       <div class="card-body">
         <h5 class="card-title">{{ cert.name }}</h5>
-        <img [src]="cert.image" alt="{{ cert.name }}" class="img-thumbnail me-3" style="width: 50px; height: 50px;">
+        <img [src]="cert.image" alt="{{ cert.name }}" class="img-thumbnail me-3" [style.width.px]="cert.imageWidth" [style.height.px]="cert.imageHeight">
 
         <h6 class="card-subtitle mt-2 mb-1 text-muted">{{ cert.issuingOrganization }}</h6>
         <p class="card-text">
