nuevas certificaciones y mas acerca de mi

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,9 +3,13 @@
         <div class="text-center">
             <h2 class="mt-2">Acerca de mí</h2>
             <img src="./assets/imgs/foto_martin_estrada.jpeg" alt="foto de Martin Estrada" width="300" height="385" class="rounded mb-4">
-            <p> Me llamo Martín Alejandro Estrada Saavedra, tengo 22 años y soy de la Ciudad de autónoma de Buenos Aires, Argentina. 
+            <p class="text-start m-3"> Me llamo Martín Alejandro Estrada Saavedra, tengo 23 años y soy de la Ciudad de autónoma de Buenos Aires, Argentina. 
                 Soy estudiante de la carrera de Ingeniería en Informática en la Facultad de Ingeniería de la Universidad de Buenos Aires.
-                Me apasiona la programación, el desarrollo de software, me encanta aprender cosas nuevas y ayudar a los demas.
+                Me apasiona la programación, el desarrollo de software, me encanta aprender cosas nuevas y ayudar a los demas. <br>
+                Actualmente, estoy cursando el tercer año de Ingeniería en Informática en la FIUBA, donde ya he adquirido conocimientos en áreas como técnicas de diseño de algoritmos, Programación Orientada a Objetos, patrones de diseño, principios SOLID, pruebas unitarias, pruebas funcionales, Ingeniería de requisitos, historias de dominio y de usuario, entre otros. Además, he trabajado en equipo a través de diversos trabajos prácticos. <br>
+                Completé dos capacitaciones clave para mi desarrollo profesional. La primera fue una formación en Spring Boot con microservicios, que no solo me permitió adquirir conocimientos técnicos avanzados, sino que también me ayudó a mejorar mi capacidad de aprendizaje autodidacta.
+                La segunda fue en EMPUJAR donde mis habilidades blandas mejoraron mucho y también me dieron una capacitación para QA Tester Manual en la UTN. <br>
+                En este momento, estoy enfocado en aprender más sobre la nube, en particular AWS, y en profundizar mis conocimientos en networking.
             </p>
         </div>
     </div>
